<resources>
    <string name="app_name">RealityApp</string>
    <string name="login_name_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_submit">登录</string>
    <string name="register_phone_hint">手机号</string>
    <string name="register_password_hint">密码</string>
    <string name="register_repassword_hint">确认密码</string>
    <string name="register_submit">注册</string>
    <string name="home">首页</string>
    <string name="theme">主题</string>
    <string name="me">我</string>
    <string name="rank">排名</string>
</resources>
