<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg"
    android:orientation="vertical"
    tools:context="com.reality.realityapp.RegisterActivity">

    <include layout="@layout/common_toolbar"></include>
    
    <EditText
        android:id="@+id/id_edt_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/register_phone_hint"
        android:paddingLeft="8dp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/id_edt_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/register_password_hint"
        android:paddingLeft="8dp"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/id_edt_repassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:inputType="text"
        android:hint="@string/register_repassword_hint"
        android:paddingLeft="8dp"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button_Large_Black"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/register_submit"/>

</LinearLayout>
