<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reality.realityapp.ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="160dip"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/id_btn_login"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/鉴闻logo" />

    <TextView
        android:id="@+id/id_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView11"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="48dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id_edt_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView11"
        android:layout_marginTop="34dp"
        android:background="@drawable/divider_normal_bottom"
        android:hint="@string/login_name_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/deepgray3"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/id_edt_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/id_edt_username"
        android:layout_marginTop="14dp"
        android:background="@drawable/divider_normal_bottom"
        android:hint="@string/login_password_hint"
        android:textSize="20dp"
        android:inputType="textWebPassword"
        android:textColorHint="@color/deepgray3"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_edt_password"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_submit"
        style="@style/Button_Large_Grey"
        />

    <TextView
        android:id="@+id/id_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_btn_login"
        android:layout_centerHorizontal="true"
        android:text="手机注册"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
